# cpp_refactoring

./: CMakeLists.txt
.github/workflows/: cmake.yml
monopoly/: CMakeLists.txt  Company.cpp  Company.h  Monolopy.cpp  Monolopy.h  MonopolyException.cpp  MonopolyException.h  Player.cpp  Player.h  main.cpp
monopoly/tests/: CMakeLists.txt  test.cpp
polish_calculator/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  solver.cpp  solver.h  solver_error.cpp  solver_error.h
polish_calculator/tests/: CMakeLists.txt  parser_test.cpp  solver_test.cpp
